          Please avoid using string evals while autodie is in scope.

        * TEST: Check for autodie leaking out of scope in the
          presence of string evals.  (string-eval-leak.t)
          Thanks to Florian Ragwitz and Vincent Pit for identifying
          this.

        * BUGFIX: autodie once again correctly works when used
          inside a string eval on Perl 5.8.x.

2.05  Sat Jul  4 16:33:01 AUSEST 2009

        * BUGFIX: format_default() in autodie::exception no longer
          returns a string with file and line attached.  This would
          cause the file and line information to appear twice when
          format handlers would choose to fall back to the defaults.
          The file and line information is now always added by
          stringify().  (RT #47520, thanks to Michael Schwern)

        * BUGFIX: Exceptions thrown by 2-argument open() are more likely
          to specify the mode as 'for reading' when no explicit
          mode was given.  (RT #47520, thanks to Michael Schwern)

2.04  Thu Jul  2 18:56:57 AUSEST 2009

        * TEST: Removed spurious warning about insufficient credit.

        * TEST: hints.t produces less debugging output when testing
          the Perl core.  (Thanks to Jerry D. Hedden)

        * TEST: hints.t no longer spuriously fails when checking
          the return values from File::Copy under Windows before
          Perl 5.10.1.  (Thanks to Curtis Jewell)

2.03  Wed Jul  1 15:39:16 AUSEST 2009

        * BUGFIX: Stopped blog_hints.t from booching under Perl
          5.8.x. because parent.pm is not installed.

2.02  Wed Jul  1 15:06:21 AUSEST 2009

        * FEATURE: autodie::exception now supports ->context() to
          discover the context of the failing subroutine, and
          ->return() to get a list of what it returned.

        * BUGFIX: ->function from autodie::exception now returns
          the original name of the dying sub, rather than its imported