@@ -19,14 +19,6 @@ my $result = eval q{
     1;
 };
 
-TODO: {
-    local $TODO;
-
-    if ($] >= 5.010) {
-        $TODO = "autodie doesn't work inside string evals on 5.10.x";
-    }
-
-    ok( ! $result, "Eval should fail with autodie/no such file");
-    ok($@, "enabling autodie in string eval should throw an exception");
-    isa_ok($@, 'autodie::exception');
-}
+ok( ! $result, "Eval should fail with autodie/no such file");
+ok($@, "enabling autodie in string eval should throw an exception");
+isa_ok($@, 'autodie::exception');
